force-app/main/default/objects/Program_Event__c/Program_Event__c.object-meta.xml
<CustomObject>
    <description>Pre-defined activities with volunteer involvements at a specific host location.</description>
    <label>Program Event</label>
    <nameField>
        <label>Program Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Events</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>