force-app/main/default/objects/Program_Event__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Program event description</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>