force-app/main/default/objects/Program_Event__c/fields/Event_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Email__c</fullName>
    <description>Program Event&#39;s point of contact email address.</description>
    <inlineHelpText>Enter this event&#39;s point of contact email address.</inlineHelpText>
    <label>Event Contact Email</label>
    <type>Email</type>
</CustomField>