force-app/main/default/objects/Program_Event__c/fields/Event_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Contact_Name__c</fullName>
    <description>Program Event&#39;s point of contact name.</description>
    <inlineHelpText>Enter this program event&#39;s point of contact name.</inlineHelpText>
    <label>Event Contact Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>