force-app/main/default/objects/Program_Event__c/fields/Event_Location_Address__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Address__c</fullName>
    <label>Event Location Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>