force-app/main/default/objects/Program_Event__c/fields/Event_Location_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Location_Postal_Code__c</fullName>
    <label>Event Location Postal Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>