force-app/main/default/objects/Program_Event__c/fields/Event_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Event_Sponsor__c</fullName>
    <label>Event Sponsor</label>
    <length>1</length>
    <type>Text</type>
</CustomField>