force-app/main/default/objects/Program_Event__c/fields/Funding_Required__c.field-meta.xml
<CustomField>
    <fullName>Funding_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether a program event requires funding. If so, the program event approval process kicks off.</description>
    <inlineHelpText>Is funding required for this program event? If so, an approval is necessary.</inlineHelpText>
    <label>Funding Required?</label>
    <type>Checkbox</type>
</CustomField>