force-app/main/default/objects/Program_Event__c/fields/Host_Location__c.field-meta.xml
<CustomField>
    <fullName>Host_Location__c</fullName>
    <label>Host Location</label>
    <length>1</length>
    <type>Text</type>
</CustomField>