force-app/main/default/objects/Program_Event__c/fields/Host_Program__c.field-meta.xml
<CustomField>
    <fullName>Host_Program__c</fullName>
    <label>Host Program</label>
    <length>1</length>
    <type>Text</type>
</CustomField>