force-app/main/default/objects/Program_Event__c/fields/Max_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Max_Attendees__c</fullName>
    <label>Max. Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>