force-app/main/default/objects/Program_Event__c/fields/Min_Attendees__c.field-meta.xml
<CustomField>
    <fullName>Min_Attendees__c</fullName>
    <label>Min. Number of Attendees</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>