force-app/main/default/objects/Program_Event__c/fields/Private_Event__c.field-meta.xml
<CustomField>
    <fullName>Private_Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to show whether an event is public or private</description>
    <inlineHelpText>Is this a private event that should not be visible to all users?</inlineHelpText>
    <label>Private Event</label>
    <type>Checkbox</type>
</CustomField>