force-app/main/default/objects/Program_Event__c/fields/Program_Event_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Event_End_Date__c</fullName>
    <description>End date and time for this program event</description>
    <inlineHelpText>Please enter both date and time</inlineHelpText>
    <label>Program Event End Date</label>
    <type>DateTime</type>
</CustomField>