force-app/main/default/objects/Program_Event__c/fields/Program_Event_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Program_Event_Start_Date__c</fullName>
    <description>Start date and time of the program event</description>
    <inlineHelpText>Please enter both date and time</inlineHelpText>
    <label>Program Event Start Date</label>
    <type>DateTime</type>
</CustomField>