force-app/main/default/objects/Program_Event__c/fields/Program_Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Program_Event_Type__c</fullName>
    <label>Program Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Book Drive</fullName>
            </value>
            <value>
                <fullName>Info Session</fullName>
            </value>
            <value>
                <fullName>Lobby Day</fullName>
            </value>
            <value>
                <fullName>Marketing Event</fullName>
            </value>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Meeting - State</fullName>
            </value>
            <value>
                <fullName>Meeting - District</fullName>
            </value>
            <value>
                <fullName>Meeting - Zone</fullName>
            </value>
            <value>
                <fullName>Parent Engagement Event</fullName>
            </value>
            <value>
                <fullName>Recruitment Event</fullName>
            </value>
            <value>
                <fullName>Volunteer Recognition Event</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>