force-app/main/default/objects/Program_Event__c/fields/Sponsor_Program__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Program__c</fullName>
    <label>Sponsor Program</label>
    <length>100</length>
    <type>Text</type>
</CustomField>