force-app/main/default/objects/Program_Event__c/fields/Total_Event_Participants__c.field-meta.xml
<CustomField>
    <fullName>Total_Event_Participants__c</fullName>
    <label>Total Event Participants</label>
    <length>100</length>
    <type>Text</type>
</CustomField>